-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
[2893639.878072] LustreError: 11121:0:(osp_object.c:594:osp_attr_get()) crex-MDT0001-osp-MDT0000:osp_attr_get update error [0x20000000a:0x1 :0x0]: rc = -5 [2893639.895830] LustreError: 11121:0:(osp_object.c:594:osp_attr_get()) Skipped 172 previous similar messages [2893639.921219] LustreError: 11121:0:(llog_cat.c:458:llog_cat_close()) crex-MDT0001-osp-MDT0000: failure destroying log during cleanup: rc = -5 [2893639.921220] LustreError: 11121:0:(llog_cat.c:458:llog_cat_close()) Skipped 1 previous similar message [2893643.015127] LustreError: 11121:0:(lquota_entry.c:132:lqe_iter_cb()) ASSERTION( lqe->u.se.lse_pending_write == 0 ) failed: [2893643.029044] LustreError: 11121:0:(lquota_entry.c:132:lqe_iter_cb()) LBUG [2893643.038158] Pid: 11121, comm: umount 3.10.0-1160.49.1.el7_lustre.ddn16.x86_64 #1 SMP Mon Dec 20 11:42:01 PST 2021 [2893643.038159] Call Trace: [2893643.038177] [<0>] libcfs_call_trace+0x90/0xf0 [libcfs] [2893643.038182] [<0>] lbug_with_loc+0x4c/0xa0 [libcfs] [2893643.038190] [<0>] lqe_iter_cb+0x147/0x150 [lquota] [2893643.038196] [<0>] cfs_hash_for_each_tight+0x11e/0x320 [libcfs] [2893643.038201] [<0>] cfs_hash_for_each_safe+0x13/0x20 [libcfs] [2893643.038205] [<0>] lquota_site_free+0x11c/0x310 [lquota] [2893643.038209] [<0>] qsd_qtype_fini+0x94/0x530 [lquota] [2893643.038213] [<0>] qsd_fini+0xd7/0x500 [lquota] [2893643.038221] [<0>] osd_shutdown+0x66/0x2e0 [osd_ldiskfs] [2893643.038229] [<0>] osd_process_config+0x277/0x360 [osd_ldiskfs] [2893643.038238] [<0>] lod_process_config+0x24d/0x1540 [lod] [2893643.038247] [<0>] mdd_process_config+0x146/0x5f0 [mdd] [2893643.038260] [<0>] mdt_stack_fini+0x2c2/0xca0 [mdt] [2893643.038266] [<0>] mdt_device_fini+0x34b/0x930 [mdt] [2893643.038294] [<0>] class_cleanup+0x9b8/0xc50 [obdclass] [2893643.038306] [<0>] class_process_config+0x65c/0x2830 [obdclass] [2893643.038319] [<0>] class_manual_cleanup+0x1c6/0x710 [obdclass] [2893643.038335] [<0>] server_put_super+0xa35/0x1150 [obdclass] [2893643.038338] [<0>] generic_shutdown_super+0x6d/0x100 [2893643.038340] [<0>] kill_anon_super+0x12/0x20 [2893643.038352] [<0>] lustre_kill_super+0x32/0x50 [obdclass] [2893643.038353] [<0>] deactivate_locked_super+0x4e/0x70 [2893643.038355] [<0>] deactivate_super+0x46/0x60 [2893643.038356] [<0>] cleanup_mnt+0x3f/0x80 [2893643.038358] [<0>] __cleanup_mnt+0x12/0x20 [2893643.038360] [<0>] task_work_run+0xbb/0xe0 [2893643.038363] [<0>] do_notify_resume+0xa5/0xc0 [2893643.038365] [<0>] int_signal+0x12/0x17 [2893643.038379] [<0>] 0xfffffffffffffffe
the following errors are also related to this issue
LustreError: 25405:0:(qmt_handler.c:516:qmt_dqacq0()) $$$ Release too much! uuid
- is duplicated by
-
LU-19236 Journaling deadlock pattern on MDS for Lustre 2.15.5, 2.15.6 and 2.15.7 with RHEL 8.10 (ldiskfs setup)
-
- Resolved
-
-
LU-17125 jbd2 commit deadlock
-
- Closed
-
- is related to
-
LU-16529 sanity-quota test_84: pool grant is not set as insane value
-
- Resolved
-
- is related to
-
LU-15927 LustreError: 25405:0:(qmt_handler.c:516:qmt_dqacq0()) $$$ Release too much! uuid
-
- Resolved
-